# PRScs

./: README.md  pyproject.toml
src/prscs/: PRScs.py  mcmc_gtb.py
